--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
     <artifactId>dockerjenkinsintegrationexample</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
+<build>
+    <finalName>docker-jenkins-integration-sample</finalName>
+</build>
 
 </project>
