--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
     <groupId>org.ebpi.sample</groupId>
     <artifactId>dockerjenkinsintegrationexample</artifactId>
     <version>1.0-SNAPSHOT</version>
+         
+   <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+   </properties>
 
 <build>
     <finalName>docker-jenkins-integration-sample</finalName>
