--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,21 @@
 
 <build>
     <finalName>docker-jenkins-integration-sample</finalName>
+    <plugins>
+        <plugin>
+            <!-- Build an executable JAR -->
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>2.4</version>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <mainClass>com.sample.example.SampleApplication</mainClass>
+                    </manifest>
+                </archive>
+            </configuration>
+        </plugin>
+    </plugins>
 </build>
 
 </project>
