--- a/pom.xml
+++ b/pom.xml
@@ -15,22 +15,27 @@
     <version>1.0-SNAPSHOT</version>
          
    <properties>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
    </properties>
 
-   <dependencies>
-       <dependency>
-           <groupId>org.springframework.boot</groupId>
-           <artifactId>spring-boot-starter-web</artifactId>
-       </dependency>
-   </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 <build>
     <finalName>docker-jenkins-integration-sample</finalName>
     <plugins>
-        <plugin>
-            <!-- Build an executable JAR -->
+        <!--<plugin>
+            &lt;!&ndash; Build an executable JAR &ndash;&gt;
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-jar-plugin</artifactId>
             <version>2.4</version>
@@ -41,7 +46,11 @@
                     </manifest>
                 </archive>
             </configuration>
-        </plugin>
+             -->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
     </plugins>
 </build>
 
